--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "moment": "^2.21.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
-    "react": "^16.0.0",
-    "react-addons-css-transition-group": "^15.6.2",
+    "react": "^16.14.0",
     "react-chartjs-2": "^2.7.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.14.0",
     "react-mousetrap": "^0.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
@@ -24,6 +23,7 @@
     "react-router-modal": "^1.3.2",
     "react-scripts": "^1.1.1",
     "react-select": "^1.2.1",
+    "react-transition-group": "^1.0.0",
     "reactstrap": "^6.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
@@ -44,5 +44,17 @@
   "devDependencies": {
     "redux-devtools": "^3.4.1",
     "redux-logger": "^3.0.6"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
